--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -25,6 +25,10 @@ html {
     margin-bottom: 15px;
 }
 
+.lightMode .inputBox {
+    background-color: #dfdcdc;
+}
+
 .inputBox input {
     flex: 1;
     padding: 10px;
@@ -33,6 +37,10 @@ html {
     background-color: transparent;
     color: #fff;
     font-size: 16px;
+}
+
+.lightMode .inputBox input {
+    color: #0b0b0b;
 }
 
 .btnBlue {
@@ -65,6 +73,15 @@ html {
     background-color: #fff;
 }
 
+.lightMode .navbar .dropDownNavbar{
+    background-color: #f4f0f0;
+    color: #000;
+}
+
+.lightMode .navbar .dropDownNavbar div{
+    border-bottom: 2px solid #000;
+}
+
 .lightMode .tabs {
     background-color: #f7f7f7;
 }
@@ -77,4 +94,18 @@ html {
 .lightMode .btn {
     background-color: #C2C1C1;
     color: #000;
+}
+
+.lightMode .listCard {
+    background-color: #ebeaeacb;
+    &:hover{
+        background-color: #c2c1c1;
+    }
+}
+
+.lightMode .gridCard {
+    background-color: #ebeaeacb;
+    &:hover{
+        background-color: #c2c1c1;
+    }
 }
